# FastApiUserTemplate

./: .dockerignore  .env.example  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/fastapiusertemplate/: __init__.py  auth.py  crud.py  database.py  main.py  models.py  schema.py
tests/: test_auth_flow.py
