[project]
name = "fastapiusertemplate"
version = "0.1.0"
description = ""
authors = [
    {name = "Pablo Costas",email = "pablocostasnieto@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.2,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)"
]

[tool.poetry]
packages = [{include = "fastapiusertemplate", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
