[project]
name = "fastapiusertemplate"
version = "0.1.0"
description = ""
authors = [
    {name = "Pablo Costas",email = "pablocostasnieto@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.2,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "pytest (>=8.0.0,<9.0.0)",
    "httpx (>=0.27.0,<1.0.0)"
]

[tool.poetry]
packages = [{include = "fastapiusertemplate", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
